--- a/includes/lib/plugin-update-checker/languages/plugin-update-checker-ja.po
+++ b/includes/lib/plugin-update-checker/languages/plugin-update-checker-ja.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2.3\n"
+"X-Generator: Poedit 1.0.0n"
 "X-Poedit-Basepath: ../../../../../../Applications/XAMPP/xamppfiles/htdocs/"
 "kisagai/wordpress/wp-content/plugins/simple-stripe-gateway/Puc\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
