--- a/langs/wpcodefactory-key-manager.pot
+++ b/langs/wpcodefactory-key-manager.pot
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2024-09-18T04:26:48+02:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.7.1\n"
-"X-Domain: wpcodefactory-key-manager\n"
+"X-Domain: wpfactory-key-manager\n"
 
 #: includes/class-wpfkm-api-access-method-option.php:124
 msgid "API access method"
